--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -23,6 +24,7 @@
     "html-webpack-plugin": "2.29.0",
     "immer": "^1.3.0",
     "jest": "20.0.4",
+    "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
     "open-color": "^1.6.3",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -36,6 +38,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "resolve": "1.6.0",
+    "sass-loader": "^7.0.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -48,10 +51,11 @@
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
-    "flow-bin": "^0.72.0"
+    "eslint-plugin-react": "^7.9.1",
+    "flow-bin": "^0.72.0",
+    "prettier-eslint": "^8.8.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
