--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
@@ -23,6 +26,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "immer": "^1.3.0",
+    "immutable": "^3.8.2",
+    "include-media": "^1.4.9",
     "jest": "20.0.4",
     "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
@@ -34,13 +39,17 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
+    "redux-pender": "^1.2.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "universal-cookie": "^2.2.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
