--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -15,6 +15,8 @@
       "prefer-template": 0,
       "no-underscore-dangle": 0,
       "no-useless-constructor": 0,
-      "max-len": 0
+      "max-len": 0,
+      "jsx-a11y/anchor-is-valid": 0,
+      "jsx-a11y/alt-text": 0
     }
   }
