--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "koa-passport": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
+    "mongoose": "^5.1.6",
     "nodemon": "^1.17.5",
     "passport-google-oauth2": "^0.1.6"
   }
