--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.12.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "dotenv": "^6.0.0",
     "jsonwebtoken": "^8.3.0",
