--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -18,5 +18,9 @@
       "max-len": 0,
       "jsx-a11y/anchor-is-valid": 0,
       "jsx-a11y/alt-text": 0,
+      "no-unused-expressions": 0,
+      "jsx-a11y/no-noninteractive-element-interactions": 0,
+      "jsx-a11y/click-events-have-key-events": 0,
+      "no-prototype-builtins": 0
     }
   }
